--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page6.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page6.xhtml
@@ -18,7 +18,8 @@
                 <h:outputText id="displayAns6" value="#{ltamprofile.textAns6}"/>
             </h2>
             <h:inputHidden id="ans6" value="#{ltamprofile.ans6}"
-                           required="true" requiredMessage="Please use the slider below to select appropriate risk tolerance"/>
+                           required="true"
+                           requiredMessage="Please use the slider below to select appropriate risk tolerance"/>
         </div>
         <div class="EmptyBox30"></div>
         <table class="Container100 Responsive100" style="border: 0px">
