--- a/ltam/modules/web/src/main/webapp/pages/consumer/confirm.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/confirm.xhtml
@@ -33,7 +33,7 @@
                     </div>
                     <div class="Container100 Responsive100">
                         <div class="ContainerIndent Responsive100">
-                            <p:messages showDetail="false" escape="true" closable="true"/>
+                            <p:growl showDetail="false" escape="true" closable="true"/>
                         </div>
                     </div>
                 </div>
