--- a/ltam/modules/web/src/main/webapp/pages/consumer/fund.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/fund.xhtml
@@ -31,7 +31,7 @@
 
                     <div class="Container100 Responsive100">
                         <div class="ContainerIndent Responsive100">
-                            <p:messages showDetail="false" escape="true" closable="true"/>
+                            <p:growl showDetail="false" escape="true" closable="true"/>
                         </div>
                     </div>
 
