--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page3.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page3.xhtml
@@ -21,7 +21,10 @@
                     <p:slider for="horizon" display="displayHorizon"
                               displayTemplate="{value} Years"
                             minValue="1" maxValue="15"/>
-                    <h:inputHidden id="horizon" value="#{ltamprofile.horizon}"/>
+                    <h:inputHidden id="horizon" value="#{ltamprofile.horizon}"
+                                   required="true"
+                                   requiredMessage="Please use the slider below to select horizon"/>
+                    />
                 </td>
                 <td style="width: 15%; text-align: left; vertical-align: middle">
                     <h:outputText value="15+ Years"/>
