--- a/ltam/modules/web/src/main/webapp/pages/consumer/confirm.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/confirm.xhtml
@@ -15,9 +15,9 @@
 
             <div class="layout-portlets-box">
                 <div class="Container100 Responsive100">
-                    <div class="ContainerIndent tab_main">
+                    <div class="ContainerIndent">
 
-                        <p:steps id="ltamprogressbar"  rendered="#{ceb.isEditMode}"
+                        <p:steps id="ltamprogressbar" class="tab_main" rendered="#{ceb.isEditMode}"
                                  activeIndex="#{ceb.ltammenu}">
                             <p:menuitem value="Start"/>
                             <p:menuitem value="Goal"/>
