--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
@@ -9,7 +9,7 @@
         <p:panel id="editPage1" style="border: 0px; background: transparent;">
             <div class="Container100 TextAlCenter">
                 <div class="TexAlCenter">
-                    <h1 class="black Fs24 fnt1">#{ceb.firstname}, your current portfolio is:</h1>
+                    <h1 class="black Fs20 fnt1">#{ceb.firstname}, your current portfolio is:</h1>
                 </div>
 
                 <table class="Container100  TextAlCenter">
@@ -26,7 +26,7 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h2 class="black f1">#{ceb.origCustomerData.themeData.longDescription}</h2>
+                                    <h2 class="black f1 textAlign">#{ceb.origCustomerData.themeData.longDescription}</h2>
                                 </div>
                             </div>
                         </td>
@@ -44,7 +44,7 @@
 
                 <div class="EmptyBox10"></div>
 
-                <div class="Fs14">
+                <div class="Fs14 textAlign">
                     I would like to re-asses my risk. By selecting one of the two options below,
                     I understand and acknowledge that I may be moving from the account originally
                     recommended to me by $ymbil
