--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
@@ -5,10 +5,10 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100">
+    <div class="Container100 Responsive100">
             <div class="ContainerIndent">
                 <div class="TextAlCenter">
-                    <h1>Which of the following best reflects your expectations for this investment?</h1>
+                    <h2>Which of the following best reflects your expectations for this investment?</h2>
 
                     <h2>
                         <p:selectOneRadio layout="pageDirection" value="#{ceb.ans2}"
