--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page3.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page3.xhtml
@@ -5,10 +5,10 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100">
+    <div class="Container100 Responsive100">
             <div class="ContainerIndent">
                 <div class="TextAlCenter">
-                    <h1>How long do you plan on keeping this account invested?</h1>
+                    <h2>How long do you plan on keeping this account invested?</h2>
 
                     <div class="EmptyBox50"></div>
                     <div class="Container100 TexAlCenter">
