--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
@@ -5,14 +5,14 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100">
+    <div class="Container100 Responsive100">
             <div class="ContainerIndent">
                 <div class="TextAlCenter">
-                    <h1>
+                    <h2>
                         Tolerating losses in some years is part of investing.
                         Based on your initial investment of #{dataDisplayConverter.displayAsMoney(ceb.investment)},
                         what is the largest loss you would comfortably tolerate during a 1-year-time-frame?
-                    </h1>
+                    </h2>
 
                     <!--ltamDownArrow-->
                     <p:panel id="page4table" styleClass="Container100" style="border: 0px">
