--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page5.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page5.xhtml
@@ -5,13 +5,13 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100">
+    <div class="Container100 Responsive100">
             <div class="ContainerIndent">
                 <div class="TextAlCenter">
-                    <h1>
+                    <h2>
                         Assuming you invest for at least 10 years, in the course of any given year,
                         which of the following range of returns would be most acceptable to you?
-                    </h1>
+                    </h2>
 
                     <div class="EmptyBox10"></div>
 
