--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
@@ -5,14 +5,14 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 ">
+    <div class="Container100 Responsive100">
             <div class="ContainerIndent">
                 <div class="TextAlCenter">
-                    <h1>
+                    <h2>
                         Risk tolerance is defined as an investor's ability to accept periodic losses
                         for the potential to realize long-term gains. How would you rate your risk
                         tolerance?
-                    </h1>
+                    </h2>
 
                     <div class="EmptyBox50"></div>
                     <div class="Container100 TexAlCenter">
