--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page8.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page8.xhtml
@@ -5,14 +5,14 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 ">
+    <div class="Container100 Responsive100">
         <div class="ContainerIndent">
             <div class="TexAlCenter">
-                <h1 class="black Fs24 fnt1">Terms of agreement</h1>
+                <h2 class="black Fs24 fnt1">Terms of agreement</h2>
             </div>
         </div>
-        <div class="EmptyBox20"></div>
-        <div class="Container100 Fs18">
+        <div class="EmptyBox5"></div>
+        <div class="Container100 Fs15">
             To sign up for online transactions, you must review the following
             Agreement, and click on the button below indicating that you understand
             and agree to the terms and conditions contained in this Agreement for
@@ -22,19 +22,19 @@
             continuing. You should print and retain a copy of this Agreement for
             your records.
         </div>
-        <div class="EmptyBox20"></div>
-        <div class="Container100 Fs18">
+        <div class="EmptyBox10"></div>
+        <div class="Container100 Fs16">
             <p:scrollPanel mode="native" style="width:100%;height:500px">
 		<br/>
                 <h1 class="TexAlCenter Fs18">RESPONSIBILITIES OF REGISTERED USERS ELIGIBLE FOR TRANSACTION PROCESSING</h1>
 
-                <p>
+                <p style="font-size: 15px;">
                     I hereby request that the Fund permit me to obtain electronic access via the Internet to my Fund account(s)
                     for the purpose of viewing my account holdings and placing purchase or transaction orders. In consideration
                     of the Fund permitting me to conduct online purchase, exchange and redemption
                     transactions through the Fund’s web site, I hereby agree to the following statements, terms and conditions:
                 </p>
-                <ol>
+                <ol class="termsNCondition">
                     <li>
                         By completing the registration process and clicking on "SUBMIT," I authorize the Fund,
                         its affiliates and agents to permit access to my account(s) with the Fund and my bank
@@ -117,9 +117,9 @@
                         This Agreement, together with the account application(s) for my account(s) and the prospectus, constitutes the entire agreement between me and the Fund and supercedes any marketing or other similar material pertaining to online transaction services delivered to me in writing, verbally or obtained at the Fund’s web site or in any other location. The terms, representations and conditions in this Agreement will apply to any account established at a later date.
                     </li>
                 </ol>
-                <h1 class="TexAlCenter Fs18">ACKNOWLEDGEMENT OF SECURITY MEASURES IMPOSED BY GEMINI FUND SERVICES, LLC</h1>
+                <h1 class="TexAlCenter Fs16">ACKNOWLEDGEMENT OF SECURITY MEASURES IMPOSED BY GEMINI FUND SERVICES, LLC</h1>
 
-                <p>
+                <p style="font-size: 15px;">
                     The Fund’s transfer agent, Gemini Fund Services, LLC employs reasonable procedures to confirm that instructions communicated on the web site are genuine. Such procedures include, but are not limited to requiring a separate application for Internet access services and appropriate personal identification for each on-line session, providing written or email confirmations of transactions to the address of record or email address of record and employing other precautions reasonably designed to protect the integrity, confidentiality and security of shareholder and account information. User IDs and passwords must comply with Gemini Fund Services, LLC procedures regarding the content and number of digits therein. Data transmitted through the web site is encrypted. Access to the web site requires a web browser supporting SSL and 128-bit encryption.
                 </p>
             </p:scrollPanel>
