--- a/ltam/modules/web/src/main/webapp/login.xhtml
+++ b/ltam/modules/web/src/main/webapp/login.xhtml
@@ -14,7 +14,7 @@
 <ui:define name="content">
 
     <div id="layout-portlets-cover">
-        <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop5"
+        <div class="other-pages-box Container40 Responsive50P MarAuto Fnone TexAlCenter ShadowGray MarTop5"
              style="background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
             <div class="Container90 Fnone MarAuto TexAlCenter">
                 <h:form id="logonForm" prependId="false">
