--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page7.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page7.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100">
+    <div class="Container100  Responsive100">
         <div class="ContainerIndent">
 
             <div class="TexAlCenter">
@@ -13,8 +13,21 @@
             </div>
             <div class="EmptyBox20"></div>
 
-            <div class="Container100 Responsive50">
+            <div class="Container100 Responsive100">
+            <div class="Container25" style="height:1px;"></div>
                 <div class="Container50 Responsive100">
+                <div class="Container100 Responsive100">
+                    <div class="ContainerIndent">
+ 			<p:panel style="height: 60%; width: 100%; background: #ffffff;">
+                            <div class="EmptyBox10"></div>
+                            <h2 class="black Fs20 fnt1 textAlign">Current Fund: #{ceb.origCustomerData.themeData.displayname}</h2>
+                            <br/>
+
+                            <h3 class="black f1 textAlign">#{ceb.origCustomerData.themeData.longDescription}</h3>
+                            <div class="EmptyBox5"></div>
+                        </p:panel>
+                    </div>
+                </div>
                     <div class="ContainerIndent">
                         <p:panel id="reviewPanel" style="height: 60%; width: 100%; background: #f5f5f5;">
                             <div class="EmptyBox5"></div>
@@ -32,7 +45,7 @@
                                                    itemValue="#{themelist.key}"/>
                                 </p:selectOneMenu>
                             </p:panelGrid>
-                            <br/>
+                            
                             <table class="Container100 Responsive100 TextAlCenter">
                                 <tr>
                                     <td colspan="2" class="TexAlCenter">
@@ -95,20 +108,7 @@
                     </div>
 
                 </div>
-                <div class="Container50 Responsive100">
-                    <div class="ContainerIndent">
-                        <p:panel style="height: 60%; width: 100%; background: #f5f5f5;">
-                            <div class="EmptyBox5"></div>
-                            <h2 class="black Fs20 fnt1">Current Fund: #{ceb.origCustomerData.themeData.displayname}</h2>
-                            <br/>
-
-                            <h3 class="black f1">#{ceb.origCustomerData.themeData.longDescription}</h3>
-
-                            <div class="EmptyBox5"></div>
-                        </p:panel>
-                    </div>
-                </div>
-
+              
             </div>
         </div>
 
