--- a/ltam/modules/web/src/main/webapp/login.xhtml
+++ b/ltam/modules/web/src/main/webapp/login.xhtml
@@ -15,7 +15,7 @@
 
     <div id="layout-portlets-cover">
         <div class="other-pages-box Container40 Responsive50P MarAuto Fnone TexAlCenter ShadowGray MarTop5"
-             style="background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+             style="background-image:url(#{resource['ltam:images/loginpageillust.svg']}); background-repeat:no-repeat; background-position:center; background-size:cover;">
             <div class="Container90 Fnone MarAuto TexAlCenter">
                 <h:form id="logonForm" prependId="false">
                     <div class="EmptyBox50"></div>
